amended loading issue on timeline infinite scroll, displayed followers as new card when follower total is tapped on mobile

--- a/scss/layout/_config.scss
+++ b/scss/layout/_config.scss
@@ -1,6 +1,6 @@
 $viewports: (
     mobile: 480px,
-    tablet: 768px
+    tablet: 900px
 );
 
 $margins: (
